syntax = "proto3";

import "google/protobuf/empty.proto";

message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
}

message GetUserRequest { int32 id = 1; }
message GetUserResponse { User user = 1; }

message CreateUserRequest {
  string name = 1;
  string email = 2;
}
message CreateUserResponse { User user = 1; }

message UpdateUserRequest {
  string oldEmail = 1;
  optional string newEmail = 2;
  optional string oldName = 3;
  optional string newName = 4;
}
message UpdateUserResponse { User user = 1; }

message DeleteUserRequest { int32 id = 1; }

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {}

  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}

  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}

  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty) {}
}
